--- a/src/examples/column-rotated-labels.html
+++ b/src/examples/column-rotated-labels.html
@@ -34,11 +34,7 @@
                     "name": "Berlin",
                     "data": [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
 
-                }],
-                "labels": {
-                    "visible": true,
-                    "rotate": true
-                }
+                }]
             }
         };
 
@@ -75,6 +71,12 @@
                     "text": "Rainfall (mm)"
                 }
             }],
+            "series": {
+                "labels": {
+                    "visible": true,
+                    "rotate": true
+                }
+            },
             "tooltip": {
                 "title": "Rainfall",
                 "valueSuffix": " mm"
