--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -34,10 +34,7 @@
                     "name": "Berlin",
                     "data": [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
 
-                }],
-                "labels": {
-                    "visible": false
-                }
+                }]
             }
         };
 
@@ -74,6 +71,11 @@
                     "text": "Rainfall (mm)"
                 }
             }],
+            "series": {
+                "labels": {
+                    "visible": false
+                }
+            },
             "tooltip": {
                 "title": "Rainfall",
                 "valueSuffix": " mm"
