--- a/src/examples/line-labels.html
+++ b/src/examples/line-labels.html
@@ -24,10 +24,7 @@
                 }, {
                     "name": "London",
                     "data": [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
-                }],
-                "labels": {
-                    "visible": true
-                }
+                }]
             }
         };
 
@@ -69,6 +66,11 @@
                     "text": "Temperature"
                 }
             }],
+            "series": {
+                "labels": {
+                    "visible": true
+                }
+            },
             "tooltip": {
                 "title": "Temperature",
                 "valueSuffix": " °C"
