fixed bug in bar chart to calculate height of bar

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
                 }
             }],
             yAxis: [{
-                name: "Rainfall",
+                name: "",
                 gridlines: "none",
                 labels: {
                     rotate: 0
@@ -109,7 +109,7 @@
                     valign: "middle"
                 }
             }, {
-                name: "Temperature",
+                name: "",
                 gridlines: "none",
                 labels: {
                     rotate: 0
@@ -136,14 +136,14 @@
         };
 
         var el = document.getElementById('chart');
-        var url = "data/multiple-axes.txt";
+        //var url = "data/multiple-axes.txt";
         //var url = "data/Actuals-vs-Budget.txt";
         //var url = "data/area-basic-1serie-ordinal.txt";
         //var url = "data/area-basic-nserie-ordinal.txt";
         //var url = "data/area-negative-1serie-ordinal.txt";
         //var url = "data/area-negative-nserie-ordinal.txt";
         //var url = "data/area-negative-inverted-1serie-ordinal.txt";
-        //var url = "data/area-negative-inverted-nserie-ordinal.txt";
+        var url = "data/area-negative-inverted-nserie-ordinal.txt";
         //var url = "data/settings-time-1.txt";
         //var url = "data/settings-time-2.txt";
         //var url = "data/settings-time-3.txt";
