--- a/src/examples/line-rotated-cat-labels.html
+++ b/src/examples/line-rotated-cat-labels.html
@@ -20,13 +20,13 @@
             "series": {
                 "name": "Population",
                 "items":	[{
-                    "name": "Rainfall",
+                    "axis": "Rainfall",
                     "data": [49.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4],
                     "type": "column",
                     "suffix": " mm"
                 },
                     {
-                        "name": "Temperature",
+                        "axis": "Temperature",
                         "data": [-5.0, -6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
                         "type": "line",
                         "suffix": " °C"
