--- a/src/examples/donut-basic.html
+++ b/src/examples/donut-basic.html
@@ -42,6 +42,11 @@
                 "align": "center",
                 "height": 50
             },
+            series: {
+                labels: {
+                    visible: true
+                }
+            },
             "tooltip": {
                 "title": "Browser usage",
                 "valueSuffix": " %"
